zerocopy-derive/tests/ui/enum.stderr
error: unrecognized representation hint
  --> $DIR/enum.rs:15:8
   |
15 | #[repr("foo")]
   |        ^^^^^

error: unrecognized representation hint
  --> $DIR/enum.rs:21:8
   |
21 | #[repr(foo)]
   |        ^^^

error: unsupported representation for deriving FromBytes, AsBytes, or Unaligned on an enum
  --> $DIR/enum.rs:27:8
   |
27 | #[repr(transparent)]
   |        ^^^^^^^^^^^

error: conflicting representation hints
  --> $DIR/enum.rs:33:1
   |
33 | / #[repr(u8, u16)]
34 | | enum Generic4 {
35 | |     A,
36 | | }
   | |_^

error: must have a non-align #[repr(...)] attribute in order to guarantee this type's memory layout
  --> $DIR/enum.rs:38:10
   |
38 | #[derive(FromBytes)]
   |          ^^^^^^^^^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:48:1
   |
48 | / #[repr(C)]
49 | | enum FromBytes1 {
50 | |     A,
51 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:54:1
   |
54 | / #[repr(usize)]
55 | | enum FromBytes2 {
56 | |     A,
57 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:60:1
   |
60 | / #[repr(isize)]
61 | | enum FromBytes3 {
62 | |     A,
63 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:66:1
   |
66 | / #[repr(u32)]
67 | | enum FromBytes4 {
68 | |     A,
69 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:72:1
   |
72 | / #[repr(i32)]
73 | | enum FromBytes5 {
74 | |     A,
75 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:78:1
   |
78 | / #[repr(u64)]
79 | | enum FromBytes6 {
80 | |     A,
81 | | }
   | |_^

error: FromBytes requires repr of "u8", "u16", "i8", or "i16"
  --> $DIR/enum.rs:84:1
   |
84 | / #[repr(i64)]
85 | | enum FromBytes7 {
86 | |     A,
87 | | }
   | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
  --> $DIR/enum.rs:94:1
   |
94 | / #[repr(C)]
95 | | enum Unaligned1 {
96 | |     A,
97 | | }
   | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:100:1
    |
100 | / #[repr(u16)]
101 | | enum Unaligned2 {
102 | |     A,
103 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:106:1
    |
106 | / #[repr(i16)]
107 | | enum Unaligned3 {
108 | |     A,
109 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:112:1
    |
112 | / #[repr(u32)]
113 | | enum Unaligned4 {
114 | |     A,
115 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:118:1
    |
118 | / #[repr(i32)]
119 | | enum Unaligned5 {
120 | |     A,
121 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:124:1
    |
124 | / #[repr(u64)]
125 | | enum Unaligned6 {
126 | |     A,
127 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:130:1
    |
130 | / #[repr(i64)]
131 | | enum Unaligned7 {
132 | |     A,
133 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:136:1
    |
136 | / #[repr(usize)]
137 | | enum Unaligned8 {
138 | |     A,
139 | | }
    | |_^

error: Unaligned requires repr of "u8" or "i8", and no alignment (i.e., repr(align(N > 1)))
   --> $DIR/enum.rs:142:1
    |
142 | / #[repr(isize)]
143 | | enum Unaligned9 {
144 | |     A,
145 | | }
    | |_^

error: cannot derive Unaligned with repr(align(N > 1))
   --> $DIR/enum.rs:148:1
    |
148 | / #[repr(u8, align(2))]
149 | | enum Unaligned10 {
150 | |     A,
151 | | }
    | |_^

error: cannot derive Unaligned with repr(align(N > 1))
   --> $DIR/enum.rs:154:1
    |
154 | / #[repr(i8, align(2))]
155 | | enum Unaligned11 {
156 | |     A,
157 | | }
    | |_^

error[E0565]: meta item in `repr` must be an identifier
  --> $DIR/enum.rs:15:8
   |
15 | #[repr("foo")]
   |        ^^^^^

error[E0552]: unrecognized representation hint
  --> $DIR/enum.rs:21:8
   |
21 | #[repr(foo)]
   |        ^^^

warning[E0566]: conflicting representation hints
  --> $DIR/enum.rs:33:8
   |
33 | #[repr(u8, u16)]
   |        ^^  ^^^

error: aborting due to 25 previous errors

Some errors have detailed explanations: E0552, E0565, E0566.
For more information about an error, try `rustc --explain E0552`.
